--- a/src/main/webapp/admin/laskutus/lähettämättä.xhtml
+++ b/src/main/webapp/admin/laskutus/lähettämättä.xhtml
@@ -215,7 +215,7 @@
 					</h:outputText>
 				</ace:column>
 				<ace:column>
-					<ace:rowEditor rendered="#{_laskurivi.muokattavissa}" rowEditListener="#{laskutusAdmin.foo}"/>
+					<ace:rowEditor rendered="#{_laskurivi.muokattavissa}" rowEditListener="#{laskutusAdmin.tallennaRivi}"/>
 				</ace:column>
 				<ace:column>
 					<h:commandButton image="/kuvat/poista.png"
